--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body{
 }
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap'); */
 
 body {
   font-family: 'Poppins', sans-serif;
